# Signex

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  Args.h  CMakeLists.txt  README.md  api.py  client.py  detector.py  main.cpp  requirements.txt  run.py  shufflels.cpp  tests.py
api/: client.py  main.py  response.py  values.py
cfg/: .gitignore  classes.lst  data.cfg  net.cfg  test.cfg
comparator/: comparator.py  main.ipynb  tri_dataset.py  tri_net.py
comparison/: comparator.py  main.ipynb  tri_dataset.py  tri_net.py
data/: data.yaml
detection/dataset/: test.lst
detection/dataset/labels/: 0015b980-Protocols_15.txt  001852e3-Tribunal_106.txt  017779f4-Passports_46.txt  037a321e-MS_683.txt  06bd93d5-Diploms_76.txt  06fe35a9-Passports_76.txt  07415101-Tribunal_135.txt  0759c471-Tribunal_199.txt  07ad4a73-Passports_54.txt  09eb1d7a-Bills_53.txt  0b2e4c14-Passports_133.txt  0b7798c8-Tribunal_171.txt  0c42eff1-Bills_207.txt  0c905ae3-Passports_140.txt  0ed2919d-Diploms_165.txt  0efb7d29-MS_676.txt  10c621ec-Tribunal_138.txt  13c34350-Bills_71.txt  1622ace8-Protocols_7.txt  1921ab3f-Bills_13.txt  1aa24f21-Passports_12.txt  1b339fce-Bills_169.txt  1cbed739-Passports_53.txt  1f0b7b7a-Bills_4.txt  2005f940-Bills_155.txt  21533762-Bills_238.txt  2177adfa-Passports_70.txt  24f78eb4-Protocols_37.txt  2576d789-Protocols_163.txt  26b5d21c-Tribunal_21.txt  2740767e-Bills_197.txt  27bc9c60-Passports_48.txt  27ea91fb-Passports_62.txt  283e1f7e-MS_363.txt  2bd3cf79-MS_412.txt  2c4a728c-Tribunal_117.txt  2f09aba6-MS_450.txt  2f16a48e-Bills_83.txt  2fc40d2b-Bills_176.txt  3029aa4d-Protocols_102.txt  (+1708 more)
detector/: detector.py
detector/dataset/: test.lst  train.lst
detector/dataset/labels/: 003312ac-Tribunal_66.txt  00a04089-Protocols_38.txt  0172a646-Bills_87.txt  02a2b2d7-Protocols_150.txt  03c1cfc3-MS_392.txt  04d2c5f1-Passports_113.txt  059065f9-Bills_135.txt  06bf40fc-Protocols_149.txt  076bc344-MS_641.txt  098967a2-Passports_88.txt  0b4ae580-MS_592.txt  0e43bb87-Protocols_115.txt  10d87a3b-Passports_90.txt  1a91ddae-Tribunal_13.txt  1ba27ff8-MS_653.txt  1d301649-Passports_128.txt  1e924129-Bills_288.txt  1f03e73b-MS_574.txt  20836d8a-Bills_291.txt  24c332b6-Bills_8.txt  279618d5-Protocols_96.txt  27f7cf7c-Bills_177.txt  29254bb2-MS_559.txt  2c54818e-Passports_28.txt  2c7837a2-Diploms_94.txt  2cb983dd-Passports_24.txt  2d5c962d-Bills_29.txt  2e3c766a-Bills_38.txt  2f336925-Bills_58.txt  2f80ae37-Passports_57.txt  30540bcb-MS_361.txt  32a191e5-Bills_94.txt  33e8de26-MS_663.txt  34aac733-Bills_209.txt  35e3d9b1-MS_570.txt  3611c46a-Passports_108.txt  3816f070-Protocols_137.txt  3900b087-MS_637.txt  39cea59f-Passports_141.txt  39ef8189-Passports_102.txt  (+1644 more)
frontend/: index.css  index.html  normalize.css
hyp/: hyp.net.yaml
utils/: pair.py  result.py
